# EvidenceForge

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TODO.md  config.example.yaml  env.example  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release-slow.yml  release.yml
Improve_Loop/scenarios/insider-exfiltration/: scenario.yaml
commands/eforge/: config.md  evaluate.md  generate.md  scenario.md  validate.md
commands/eforge/references/: config-apps-processes.md  config-dependency-graph.md  config-dns-network.md  config-evaluation.md  config-formats.md  config-host-activity.md  config-personas.md  config-validation.md  evidence-formats.md  scenario-reference.md
docs/: ARCHITECTURE.md  PRD.md  data-quality-prd.md  event-model-prd.md  scenario-reference.md
docs/design/: PRD.md  architecture-reset-implementation-plan.md  architecture-reset-recommendation.md  architecture-reset-requirements-review.md  architecture-reset-requirements.md  data-quality-prd.md  email-evidence-design.md  event-model-prd.md  synthetic-log-generation-research.md  traffic-profiles-design.md
docs/external-parser-validation/: AGENTS.md  README.md  coverage-matrix.md  ignored-parser-tags.md  sof-elk-harness.md  splunk-harness.md
docs/output-targets/: README.md  default.md  sof-elk.md  splunk.md
docs/reference/: CUSTOMIZING_CONFIG.md  EVIDENCE_FORMATS.md  adversarial_payload.md  external-parser-validation.md  scenario-reference.md  spillage.md
docs/worklog/: 2026-05-26-release-readiness-review.md  2026-05-29-splunk-output-target.md  2026-05-current-dev-assessment-continuation.md  2026-06-03-pr-289-spillage-followup.md  2026-06-08-windows-spool-performance.md  2026-06-17-pr296-feedback-incorporation.md  2026-06-26-identity-source-timing.md  2026-06-27-network-identities-traffic-affinities.md  2026-06-28-web-generation-performance.md  2026-07-02-email-evidence.md  2026-07-02-email-v1-assessment.md  2026-07-03-iteration-test-expanded-assessment.md  2026-07-08-monotonic-blind-loop-experiment.md  2026-07-13-iteration-test-expanded-assessment.md  2026-07-14-network-transaction-observation-contract.md  2026-07-15-explicit-identity-lifecycle-contract.md  2026-07-15-session-closure-lifecycle-contract.md  2026-07-16-cryptographic-protocol-payload-contract.md  2026-07-16-windows-remote-auth-observation-contract.md  README.md
personas/: analyst.yaml  data_analyst.yaml  executive.yaml  help_desk.yaml  intern.yaml  marketing.yaml  project_manager.yaml  sales.yaml  security_analyst.yaml  sysadmin.yaml
scenarios/: COVERAGE-TEST-PROMPT.md  ITERATION-LOOP-FAMILY-IMPROVEMENT-PROMPT.md  ITERATION-TEST-PROMPT.md  LARGE-SCALE-COVERAGE-TEST-PROMPT.md  full-coverage-corporate-breach.yaml
scenarios/apt-healthcare-breach/: ENVIRONMENT.md  scenario.yaml
scenarios/branch-office-example/: scenario.yaml
scenarios/corporate-breach/: scenario.yaml
scenarios/llm-injection-demo/: README.md  scenario-clean.yaml  scenario.yaml
scenarios/spillage-full-matrix-test/: ENVIRONMENT.md  README.md  scenario.yaml
scripts/: external_parser.py
skills/eforge/: generate.md  scenario.md  validate.md
src/evidenceforge/: __init__.py  __main__.py  output_targets.py
src/evidenceforge/_data/: __init__.py
src/evidenceforge/cli/: __init__.py  commands.py  info.py  install_skills.py  validate_config.py
src/evidenceforge/config/: README.md  __init__.py  beacon_profiles.py  observation_profiles.py  overlay.py  payload_families.py  public_dns_templates.py  schemas.py  secret_families.py  sysmon_filters.py  traffic_rates.py  web_scan_presets.py
src/evidenceforge/evaluation/: __init__.py  _shared.py  anomaly.py  context.py  engine.py  models.py  report.py  storyline.py  thresholds.py  visibility.py
src/evidenceforge/events/: __init__.py  artifacts_manifest.py  authentication.py  base.py  collection_profile.py  contexts.py  cryptography.py  dispatcher.py  ground_truth.py  identity.py  lifecycle.py  network.py  observation.py  observation_manifest.py  proxy.py
src/evidenceforge/external_parsers/: __init__.py  compose_runtime.py  errors.py  runner.py  sof_elk.py  sof_elk_sources.py  sof_elk_zeek.py  splunk.py  splunk_runtime.py  tag_policy.py
src/evidenceforge/formats/: __init__.py  format_def.py  loader.py  validator.py
src/evidenceforge/generation/: __init__.py  activity.py  adversarial_payload.py  engine.py  (+11 more)
src/log_generator/: __init__.py  __main__.py
tests/: conftest.py
tests/external_parser/: __init__.py  sample_data.py  test_sof_elk_windows_snare.py  test_sof_elk_zeek.py  test_splunk_harness.py
tests/helpers/: __init__.py  sof_elk_zeek.py
tests/integration/: __init__.py  test_adversarial_payload_generation.py  test_deterministic_generation.py  test_explicit_proxy_storyline.py  test_format_definitions.py  test_inbound_pipeline.py  test_llm_injection_demo.py  test_medium_dataset.py  test_nat_pipeline.py  test_parallel_generation.py  test_scenario_timezone.py  test_spillage_generation.py
tests/support/: output_equivalence.py
tests/unit/: test_activity.py  test_activity_helpers.py  test_activity_threading.py  test_adversarial_payload.py  test_application_catalog.py  test_baseline_canonical.py  test_bash_history_noise.py  test_browser_session_contract.py  test_browsing_session.py  test_bulk_events.py  test_calltrace_patterns.py  test_causal_engine.py  test_cisco_asa_emitter.py  test_cisco_asa_parser.py  test_cli.py  test_cli_info.py  test_collection_profile.py  test_config.py  test_cryptographic_material_contract.py  test_cryptographic_protocol_contract.py  test_day_of_week.py  test_dc_kerberos_logon.py  test_deferred_items.py  test_dhcp_and_certs.py  test_dhcp_setup.py  test_dispatcher.py  test_dll_load_profiles.py  test_dns_realism.py  test_dns_registry.py  test_ecar_spec_compliance.py  test_ecar_thread_process_access.py  test_edr_flow_pid.py  test_edr_object_graph.py  test_edr_pools.py  test_email_evidence.py  test_emitter_path_safety.py  test_emitter_threading.py  test_emitters.py  test_engine.py  test_eval_cross_source.py  (+138 more)
(+625 files in other folders)
