[project]
name = "evidence-forge"
version = "0.1.0"
description = "Generate realistic synthetic security logs for cybersecurity threat hunting training and research"
readme = "README.md"
authors = [
    { name = "David J. Bianco", email = "davidjbianco@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
"typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "pytz>=2024.1",
    "jinja2>=3.1.0",
    "json-logic-qubit>=0.9.1",
    "python-dotenv>=1.2.2",
]

[project.scripts]
eforge = "evidenceforge.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.3.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evidenceforge"]

[tool.hatch.build.targets.wheel.force-include]
"commands/eforge/scenario.md" = "evidenceforge/_data/commands/eforge/scenario.md"
"commands/eforge/generate.md" = "evidenceforge/_data/commands/eforge/generate.md"
"commands/eforge/validate.md" = "evidenceforge/_data/commands/eforge/validate.md"
"commands/eforge/evaluate.md" = "evidenceforge/_data/commands/eforge/evaluate.md"
"docs/reference/scenario-reference.md" = "evidenceforge/_data/references/scenario-reference.md"
"docs/reference/EVIDENCE_FORMATS.md" = "evidenceforge/_data/references/evidence-formats.md"
"personas" = "evidenceforge/_data/personas"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "live: Tests requiring LLM API calls (not run by default)",
    "slow: Tests requiring large dataset generation (100+ users, minutes to run)",
]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=evidenceforge",
    "--cov-report=term-missing",
    "--cov-report=html",
    "-m", "not slow and not live",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
fail_under = 90

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function calls in defaults — required by Typer's API pattern
    "N806",  # constant-style names in functions — intentional for lookup tables
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py files
"src/evidenceforge/cli/commands.py" = ["B904"]  # typer.Exit() in except blocks shouldn't chain
